# aws-cdk-fargate-gunicorn

./: README.md  package.json
app/: Dockerfile  gunicorn_config.py  pyproject.toml
cdk_stack/: app.py  cdk.context.json  pyproject.toml  setup.py
cdk_stack/stack/: app_stack.py  base_stack.py  stack_stack.py
