[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI api running on uvicorn via gunicorn deployed to aws fargate behind an ALB"
authors = ["Dino Hensen <dino.hensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
